Fix Codacy CodeStyle issues in remote-spec loading
- Replace deprecated new URL(String) with URI.create(...).toURL() (ApiTool, SchemaUtil)
- Remove fully-qualified names (java.net.URL, StandardCharsets in test)
- Route AsyncApi remote read through PathUtil.openUrlStream (timeouts + shorter line)
- Wrap long lines

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>